k8s/prometheus/gfs.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ep-gfs-prom
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.133.30.28
